--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <option value="2">Gauss-Seidel</option>
         </select>
         <br><br>
-        <label>Número de equações:</label>
+        <label>Ordem da Equação:</label>
         <input type="number" id="numero-equacoes">
         <br><br>
         <div id="coeficientes">
