[Laboratório] 29/05/2023 - parte 2/3 - versao 3

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <option value="2">Gauss-Seidel</option>
         </select>
         <br><br>
-        <label>Ordem da Equação:</label>
+        <label>Ordem da Matriz:</label>
         <input type="number" id="numero-equacoes">
         <br><br>
         <div id="coeficientes">
