--- a/calculadora.html
+++ b/calculadora.html
@@ -5,23 +5,34 @@
     <title>Calculadora de Sistemas Lineares</title>
 </head>
 <body>
-    <h1>Calculadora de Sistemas Lineares</h1>
-    <p>Opções:</p>
-    <select id="opcao">
-        <option value="1">Eliminação de Gauss</option>
-        <option value="2">Gauss-Seidel</option>
-    </select>
-    <br><br>
-    <label>Ordem da Matriz:</label>
-    <input type="number" id="numero-equacoes">
-    <br><br>
-    <div id="coeficientes">
-        <!-- Aqui serão adicionados os campos dinamicamente -->
+
+    <div style="max-width: 600px; margin: 0 auto;">
+        <h1>Calculadora de Sistemas Lineares</h1>
+        <p>Opções:</p>
+        <select id="opcao">
+            <option value="1">Eliminação de Gauss</option>
+            <option value="2">Gauss-Seidel</option>
+        </select>
+        <br><br>
+        <label>Ordem da Matriz:</label>
+        <input type="number" id="numero-equacoes">
+        <br><br>
+
+        <div id="coeficientes">
+            <p>Matriz A:</p>
+            <div>
+                <!-- Aqui serão adicionados os campos dinamicamente -->
+            </div>
+            <p>Matriz B:</p>
+            <div>
+                <!-- Aqui serão adicionados os campos dinamicamente -->
+            </div>
+        </div>
+        <br>
+        <button id="botaoCalcular">Calcular</button>
+        <br><br>
+        <div id="solucoes"></div>
     </div>
-    <br>
-    <button id="botaoCalcular">Calcular</button>
-    <br><br>
-    <div id="solucoes"></div>
 
 </body>
 </html>
