adicionando botao de limpar

--- a/calculadora.html
+++ b/calculadora.html
@@ -62,6 +62,10 @@
             text-align: center;
             border: 1px solid black;
         }
+        
+        #botaoLimpar { 
+            background-color: rgb(171, 0, 0);
+        }
 
         #etapas p {
             margin: 5px 0;
@@ -102,6 +106,7 @@
 
         <br>
         <button id="botaoCalcular">Calcular</button>
+        <button class="botaoLimpar" id="botaoLimpar">Limpar</button>
         <br><br>
         <div id="etapas"></div>
         <div id="solucoes"></div>
