att no layout do front do LU e permutacao

--- a/calculadora.html
+++ b/calculadora.html
@@ -102,7 +102,7 @@
             <label>Iterações Máximas:</label>
             <input type="number" id="iteracoes-maximas">
             <br><br>
-        </div>
+        </div>       
 
         <br>
         <button id="botaoCalcular">Calcular</button>
@@ -110,6 +110,10 @@
         <br><br>
         <div id="etapas"></div>
         <div id="solucoes"></div>
+        <div id="matriz-p"></div>
+        <div id="matriz-l"></div>
+        <div id="matriz-u"></div>
+
     </div>
 </body>
 </html>
